--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -10,13 +10,9 @@
             HELLO,
       </h1>
       <div>
-          <p style="text-indent: 100px;"> I am <b class="text-warning">sadan subedi</b>
-              Lorem ipsum dolor sit, amet consectetur adipisic
-              ing elit. Sunt molestiae minus asperiores aliquam, veniam nobis fugit
-               adipisci dolorem a ipsam perferendis necessitatibus
-               ullam. Dolores illo minima nulla. Amet, quia quae?
-               k lekham k lekham vayo so...... j pai tei hehe aaru k lehney vaney socheko rati ko 
-               12 baji sakey xa aba sutnai mann nai lagena so i want to complete it anyhow 
+          <p style="text-indent: 100px;"> I am <b class="text-warning">sadan subedi</b>,
+            Currently studying BSC CSIT ,beside it working on python/django project, love to build project.I am pursue of becoming software engineer.
+             I love watching movie,singing listening song, love to communicate with people, believe in team work.
           </p>
       </div>
   </div>
