--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,7 +5,7 @@
   <div class="text-center">
     <img src="{% static 'core/images/IMG_0490.png' %}" alt="profilepic" class="img-thumbnail" width="250px" height="150px">
   </div>
-  <div class="mt-5 text-white">
+  <div class="mt-5 text-white mx-5 text-justify">
       <h1 class="font-weight-bold st-font">
             HELLO,
       </h1>
